--- a/packages.rc
+++ b/packages.rc
@@ -1,2 +1,11 @@
 force_packages=""
-skip_install="main/apps/julia/0.4.3 main/apps/julia/0.4.5 main/apps/memesuite/4.11.1:mpi main/apps/bsoft/1.9.1"
+
+# https://github.com/alces-software/packager-base/issues/155
+# https://github.com/alces-software/packager-base/issues/156
+skip_install="main/apps/julia/0.4.3 main/apps/julia/0.4.5"
+
+# https://github.com/alces-software/packager-base/issues/80
+skip_install="$skip_install main/apps/memesuite/4.11.1:mpi"
+
+# https://github.com/alces-software/packager-base/issues/157
+skip_install="$skip_install main/apps/bsoft/1.9.1"
