--- a/packages.rc
+++ b/packages.rc
@@ -9,3 +9,8 @@ skip_install="$skip_install main/apps/memesuite/4.11.1:mpi"
 
 # https://github.com/alces-software/packager-base/issues/157
 skip_install="$skip_install main/apps/bsoft/1.9.1"
+
+# https://github.com/alces-software/packager-base/issues/153
+skip_install="$skip_install main/libs/opencv/2.4.9:default main/libs/opencv/2.4.9:tbb"
+# https://github.com/alces-software/packager-base/issues/152
+skip_install="$skip_install main/libs/opencv/2.4.12:default main/libs/opencv/2.4.12:tbb"
