--- a/el7-1.6-main/Dockerfile
+++ b/el7-1.6-main/Dockerfile
@@ -11,5 +11,6 @@ RUN cd /opt/clusterware/var/lib/gridware/repos/main && /opt/clusterware/opt/git/
 RUN sed -i -e 's,:default_binary_url:.*,:default_binary_url: https://s3-eu-west-1.amazonaws.com/packages.alces-software.com/gridware/%24dist,g' /opt/gridware/etc/gridware.yml
 RUN /opt/clusterware/bin/alces storage enable http
 RUN bash -c 'mkdir -p /etc/xdg/clusterware/storage && echo cw_STORAGE_http_base_url="https://s3-eu-west-1.amazonaws.com/packages.alces-software.com/gridware/%24data" > /etc/xdg/clusterware/storage/gridware-data.http.rc'
+RUN useradd testuser
 
 CMD ["/bin/bash"]
