Correct checksum issues when installing packages via yum

--- a/el7-1.6/Dockerfile
+++ b/el7-1.6/Dockerfile
@@ -12,5 +12,7 @@ RUN cd /opt/clusterware/var/lib/gridware/repos/volatile/pkg && /opt/clusterware/
 RUN sed -i -e 's, - /opt/clusterware/var/lib/gridware/repos/main,# - /opt/clusterware/var/lib/gridware/repos/main,g' /opt/gridware/etc/gridware.yml
 RUN sed -i -e 's,# - /opt/clusterware/var/lib/gridware/repos/volatile, - /opt/clusterware/var/lib/gridware/repos/volatile,g' /opt/gridware/etc/gridware.yml
 RUN sed -i -e 's,:default_binary_url:.*,:default_binary_url: https://s3-eu-west-1.amazonaws.com/packages.alces-software.com/gridware/%24dist,g' /opt/gridware/etc/gridware.yml
+# to correct checksum issues when installing packages - ref: https://github.com/CentOS/sig-cloud-instance-images/issues/15
+RUN yum install -y yum-plugin-ovl
 
 CMD ["/bin/bash"]
