--- a/packages.rc
+++ b/packages.rc
@@ -7,6 +7,7 @@ force_packages=""
 
 # no binaries available
 skip_install="$skip_install main/libs/boost/1.36.0:gcc34"
-skip_install="$skip_install apps/openms/2.0.1:python"
-skip_install="$skip_install apps/openms/2.2.0:python"
-skip_install="$skip_install apps/tensorflow/1.6.0:cuda"
+skip_install="$skip_install main/apps/openms/2.0.1:python"
+skip_install="$skip_install main/apps/openms/2.2.0:python"
+skip_install="$skip_install main/apps/tensorflow/1.6.0:cuda"
+
