--- a/packages.rc
+++ b/packages.rc
@@ -1,9 +1,13 @@
 force_packages=""
 
-# skip as dependency libs/nvidia-cuda is too large to sensibly download
-#skip_install="$skip_install main/apps/gpuburn/0.6"
-# skip as this package is too large to sensibly download
-#skip_install="$skip_install main/libs/nvidia-cuda/7.5.18"
+# skip for efficiency as dependency libs/nvidia-cuda takes a long time ot download
+skip_install="$skip_install main/apps/gpuburn/0.6"
+
+# skip for efficiency as nvidia-cuda takes a long time to download
+skip_install="$skip_install main/libs/nvidia-cuda/7.0.28"
+skip_install="$skip_install main/libs/nvidia-cuda/7.5.18"
+skip_install="$skip_install main/libs/nvidia-cuda/8.0.44"
+skip_install="$skip_install main/libs/nvidia-cuda/8.0.61"
 
 # no binaries available
 skip_install="$skip_install main/libs/boost/1.36.0:gcc34"
